--- a/examples/large_example_colab.ipynb
+++ b/examples/large_example_colab.ipynb
@@ -33,23 +33,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
-        "%pip install -q grad-visitor-scheduler pandas pyyaml matplotlib seaborn python-docx"
+        "import sys\n",
+        "\n",
+        "# Check if running in Google Colab\n",
+        "IN_COLAB = \"google.colab\" in sys.modules\n",
+        "if IN_COLAB:\n",
+        "\n",
+        "    # Install necessary packages in Colab environment\n",
+        "    %pip install -q grad-visitor-scheduler pandas pyyaml matplotlib seaborn python-docx"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 1) Imports and Working Directory"
+        "## 1) Imports"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -59,11 +66,7 @@
         "import pandas as pd\n",
         "from IPython.display import Image, display\n",
         "\n",
-        "from grad_visit_scheduler import scheduler_from_configs, Mode, Solver, export_visitor_docx\n",
-        "\n",
-        "workdir = Path('grad_visit_large_example')\n",
-        "workdir.mkdir(parents=True, exist_ok=True)\n",
-        "workdir"
+        "from grad_visit_scheduler import scheduler_from_configs, Mode, Solver, export_visitor_docx"
       ]
     },
     {
@@ -82,10 +85,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "AttributeError",
+          "evalue": "'str' object has no attribute 'write_text'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 97\u001b[39m\n\u001b[32m     94\u001b[39m config_path = \u001b[33m'\u001b[39m\u001b[33mconfig_info_colab.yaml\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m     95\u001b[39m visitors_path = \u001b[33m'\u001b[39m\u001b[33mdata_visitors_colab.csv\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m97\u001b[39m \u001b[43mfaculty_path\u001b[49m\u001b[43m.\u001b[49m\u001b[43mwrite_text\u001b[49m(faculty_yaml, encoding=\u001b[33m'\u001b[39m\u001b[33mutf-8\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     98\u001b[39m config_path.write_text(config_yaml, encoding=\u001b[33m'\u001b[39m\u001b[33mutf-8\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     99\u001b[39m pd.DataFrame(visitor_rows).to_csv(visitors_path, index=\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+            "\u001b[31mAttributeError\u001b[39m: 'str' object has no attribute 'write_text'"
+          ]
+        }
+      ],
       "source": [
+        "# Define the faculty information including name, building abbreviation, \n",
+        "# room number, research areas, and status. Aliases can be used to map different \n",
+        "# names (e.g., nicknames, common misspellings) to the same faculty member,\n",
+        "# \n",
+        "# This information is stored in a YAML format for easy parsing.\n",
         "faculty_yaml = dedent('''\n",
         "faculty:\n",
         "  Prof. A:\n",
@@ -122,6 +142,18 @@
         "aliases: {}\n",
         "''').strip()\n",
         "\n",
+        "# Define the building names (or abbreviations) and the time slots available \n",
+        "# for visits in each building\n",
+        "# \n",
+        "# Specify which time slots are available for breaks.\n",
+        "# \n",
+        "# Specify the research areas relevant to the visits. The program includes error checking to ensure that \n",
+        "# these areas align with faculty and visitor data.\n",
+        "#\n",
+        "# Specify the weight given to the first (Area1) and second (Area2) research area \n",
+        "# preferences given by the visitors.\n",
+        "#\n",
+        "# Specify for each faculty member which time slots they are available for visits.\n",
         "config_yaml = dedent('''\n",
         "buildings:\n",
         "  ABC: [\"1:00-1:25\", \"1:30-1:55\", \"2:00-2:25\", \"2:30-2:55\"]\n",
@@ -145,6 +177,9 @@
         "  Prof. F: [1, 3, 4]\n",
         "''').strip()\n",
         "\n",
+        "# Define the visitor information, including their name, ranked preferences for faculty meetings (Prof1-Prof4), \n",
+        "# and their research area preferences (Area1, Area2). This information is stored in a CSV format for easy parsing.\n",
+        "# You may find it easier to create and edit this information in a spreadsheet program and then export it as CSV.\n",
         "visitor_rows = [\n",
         "    {\"Name\": \"Visitor 01\", \"Prof1\": \"Prof. A\", \"Prof2\": \"Prof. C\", \"Prof3\": \"Prof. E\", \"Prof4\": \"Prof. F\", \"Area1\": \"Energy\", \"Area2\": \"Theory\"},\n",
         "    {\"Name\": \"Visitor 02\", \"Prof1\": \"Prof. B\", \"Prof2\": \"Prof. D\", \"Prof3\": \"Prof. F\", \"Prof4\": \"Prof. C\", \"Area1\": \"Bio\", \"Area2\": \"Energy\"},\n",
@@ -158,9 +193,9 @@
         "    {\"Name\": \"Visitor 10\", \"Prof1\": \"Prof. D\", \"Prof2\": \"Prof. B\", \"Prof3\": \"Prof. F\", \"Prof4\": \"Prof. C\", \"Area1\": \"Energy\", \"Area2\": \"Theory\"},\n",
         "]\n",
         "\n",
-        "faculty_path = workdir / 'faculty_formulation.yaml'\n",
-        "config_path = workdir / 'config_formulation.yaml'\n",
-        "visitors_path = workdir / 'data_formulation_visitors.csv'\n",
+        "faculty_path = 'faculty_info_colab.yaml'\n",
+        "config_path = 'config_info_colab.yaml'\n",
+        "visitors_path = 'data_visitors_colab.csv'\n",
         "\n",
         "faculty_path.write_text(faculty_yaml, encoding='utf-8')\n",
         "config_path.write_text(config_yaml, encoding='utf-8')\n",
@@ -318,26 +353,32 @@
       "outputs": [],
       "source": [
         "if s.has_feasible_solution():\n",
-        "    docx_path = export_visitor_docx(s, workdir / 'visitor_schedule_notebook_demo.docx')\n",
+        "    docx_path = export_visitor_docx(s, 'visitor_schedule_notebook_demo.docx')\n",
         "    print(f'DOCX written to: {docx_path}')\n",
         "\n",
-        "    try:\n",
+        "    if IN_COLAB\n",
         "        from google.colab import files\n",
-        "        files.download(str(docx_path))\n",
-        "    except Exception:\n",
-        "        pass"
+        "        files.download(str(docx_path))"
       ]
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "scheduler1",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
-      "version": "3.11"
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.11"
     }
   },
   "nbformat": 4,
