Added new feature to support multiple buildings

--- a/examples/large_example_colab.ipynb
+++ b/examples/large_example_colab.ipynb
@@ -99,7 +99,7 @@
     "    if src_path.exists():\n",
     "        sys.path.insert(0, str(src_path))\n",
     "\n",
-    "from grad_visit_scheduler import scheduler_from_configs, Mode, Solver, export_visitor_docx\n"
+    "from grad_visit_scheduler import scheduler_from_configs, Solver, export_visitor_docx\n"
    ]
   },
   {
@@ -469,7 +469,6 @@
     "    faculty_catalog_path=faculty_path,\n",
     "    run_config_path=config_path,\n",
     "    student_data_filename=visitors_path,\n",
-    "    mode=Mode.NO_OFFSET,\n",
     "    solver=Solver.HIGHS,\n",
     ")\n",
     "\n",
